--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>This is the title of the webpage!</title>
+    <title>Mbop-</title>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
+    <p>Easy way to do your work</p>
+    <div>
+      <h2>Open : <var>assignment_name</var></h2>
+      <button>Open</button>
+    </div>
   </body>
 </html>
